[package]
name = "game-programming"
version = "0.1.0"
authors = ["Matthew J. Berger <matthewberger@nevada.unr.edu>"]
edition = "2018"

[dependencies]
gl = "0.10.0"

[dependencies.sdl2]
version = "0.31.0"
features = ["bundled", "static-link"]

[lib]
name = "core"
path = "src/lib.rs"

[[bin]]
name = "pong"
path = "src/bin/pong.rs"
